fix scrollbar and close button

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -12,9 +12,7 @@
   transform: translateX(-100%);
   overflow: auto;
 
-  @include on-tablet {
-    padding-inline: 72px;
-  }
+  @include padding-inline;
 
   &:target {
     transform: translateX(0);
