--- a/src/styles/blocks/reset.scss
+++ b/src/styles/blocks/reset.scss
@@ -12,6 +12,7 @@
   scroll-behavior: smooth;
   &:has(.page__menu:target) {
     overflow: hidden;
+    scrollbar-gutter: stable;
   }
 
   &__body {
